added sdk initialization with permanent tokens