@@ -7,12 +7,12 @@
 package com.bynder.sdk.sample;
 
 import com.bynder.sdk.configuration.Configuration;
+import com.bynder.sdk.configuration.OAuthSettings;
 import com.bynder.sdk.model.Brand;
 import com.bynder.sdk.model.Derivative;
 import com.bynder.sdk.model.Media;
 import com.bynder.sdk.model.MediaType;
 import com.bynder.sdk.model.oauth.RefreshTokenCallback;
-import com.bynder.sdk.model.oauth.Scope;
 import com.bynder.sdk.model.oauth.Token;
 import com.bynder.sdk.query.MediaQuery;
 import com.bynder.sdk.query.OrderBy;
@@ -38,62 +38,82 @@ public class AppSample {
     private static final Logger LOG = LoggerFactory.getLogger(AppSample.class);
 
     public static void main(final String[] args) throws URISyntaxException, IOException {
+        /**
+         * Loads app.properties file under src/main/resources
+         */
         AppProperties appProperties = new AppProperties();
 
-        // optional: define callback function to be triggered after access token is auto refreshed
+        // Initialize BynderClient with a permanent token
+        BynderClient client = BynderClient.Builder.create(
+            new Configuration.Builder(new URL(appProperties.getProperty("BASE_URL")))
+                .setPermanentToken(appProperties.getProperty("PERMANENT_TOKEN")).build());
+
+        AssetService assetService = client.getAssetService();
+
+        // Call the API to request for media assets
+        List<Media> mediaList = assetService.getMediaList(
+            new MediaQuery().setType(MediaType.IMAGE).setOrderBy(OrderBy.NAME_DESC).setLimit(10)
+                .setPage(1)).blockingSingle().body();
+        for (Media media : mediaList) {
+            LOG.info(media.getName());
+        }
+
+        // Optional: define callback function to be triggered after access token is auto
+        // refreshed
         RefreshTokenCallback callback = new RefreshTokenCallback() {
             @Override
             public void execute(Token token) {
                 LOG.info("Auto refresh triggered!");
+                LOG.info(String.format("Refresh token used: %s", token.getRefreshToken()));
                 LOG.info(String.format("New access token: %s", token.getAccessToken()));
-                LOG.info(String.format("New refresh token: %s", token.getRefreshToken()));
-                LOG.info(String.format("New access token expiration date: %s",
-                    token.getAccessTokenExpiration()));
+                LOG.info(String.format("New access token expiration date: %s", token.getAccessTokenExpiration()));
             }
         };
 
-        // initialize BynderClient with config values stored in src/main/resources/app.properties
-        BynderClient client = BynderClient.Builder.create(
-            new Configuration.Builder(new URL(appProperties.getProperty("BASE_URL")),
-                appProperties.getProperty("CLIENT_ID"), appProperties.getProperty("CLIENT_SECRET"),
-                new URI(appProperties.getProperty("REDIRECT_URI"))).setCallback(callback).build());
+        // Initialize BynderClient with oauth settings to perform OAuth 2.0
+        // authorization flow
+        client = BynderClient.Builder.create(
+            new Configuration.Builder(new URL(appProperties.getProperty("BASE_URL")))
+                .setOAuthSettings(new OAuthSettings(appProperties.getProperty("CLIENT_ID"),
+                appProperties.getProperty("CLIENT_SECRET"), new URI(appProperties.getProperty("REDIRECT_URI")),
+                callback)).build());
 
-        // initialize OAuthService
+        // Initialize OAuthService
         OAuthService oauthService = client.getOAuthService();
 
-        List<String> scopes = Arrays.asList(Scope.OPEN_ID.toString(), Scope.OFFLINE.toString());
+        List<String> scopes = Arrays.asList("offline", "asset:read");
         URL authorizationUrl = oauthService.getAuthorizationUrl("state example", scopes);
 
-        // open browser with authorization URL
+        // Open browser with authorization URL
         Desktop desktop = Desktop.getDesktop();
         desktop.browse(authorizationUrl.toURI());
 
-        // ask for the code returned in the redirect URI
+        // Ask for the code returned in the redirect URI
         System.out.println("Insert the code: ");
         Scanner scanner = new Scanner(System.in);
         String code = scanner.nextLine();
         scanner.close();
 
-        //get the access token
+        // Get the access token
         oauthService.getAccessToken(code, scopes).blockingSingle();
 
-        // call the API to request for the account information
+        // Call the API to request for the account information
         List<Derivative> derivatives = client.getDerivatives().blockingSingle().body();
         for (Derivative derivative : derivatives) {
             LOG.info(derivative.getPrefix());
         }
 
-        // get the asset service
-        AssetService assetService = client.getAssetService();
+        // Get the asset service
+        assetService = client.getAssetService();
 
-        // call the API to request for brands
+        // Call the API to request for brands
         List<Brand> brands = assetService.getBrands().blockingSingle().body();
         for (Brand brand : brands) {
             LOG.info(brand.getName());
         }
 
-        // call the API to request for media assets
-        List<Media> mediaList = assetService.getMediaList(
+        // Call the API to request for media assets
+        mediaList = assetService.getMediaList(
             new MediaQuery().setType(MediaType.IMAGE).setOrderBy(OrderBy.NAME_DESC).setLimit(10)
                 .setPage(1)).blockingSingle().body();
         for (Media media : mediaList) {
